# url_shortener

./: pyproject.toml
shortener/: admin.py  models.py  serializers.py  urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_shortener_access_counter_alter_shortener_slang.py
url_shortener/: settings.py  urls.py
